# Awesome-LLM-Interview

./: .gitignore  01_名词解释.md  02_分词算法.md  03_Transformer架构.md  04_位置编码.md  05_预训练与微调.md  06_SFT.md  07_RLHF_DPO_PPO.md  08_LoRA与PEFT.md  09_KV_Cache.md  10_量化.md  11_解码策略.md  12_推理加速.md  13_MoE.md  14_RAG.md  15_Agent.md  README.md  cheatsheet.html  projects.md  real_interview_questions.md
assets/: local_pdf_rag_index.json
commercial_rag_ticket_assistant/: demo.py  pyproject.toml
commercial_rag_ticket_assistant/src/commercial_rag_ticket_assistant/: api.py  audit.py  business_metrics.py  cache.py  config.py  costs.py  domain.py  evaluation.py  feedback.py  ingestion.py  rag.py  retrieval.py  security.py  tickets.py
commercial_rag_ticket_assistant/tests/: test_commercial_rag.py
interview_simulator_lab/: README.md  pyproject.toml
interview_simulator_lab/data/: eval_cases.jsonl  notes_interviews.jsonl  seed_interviews.jsonl
interview_simulator_lab/scripts/: build_notes_interviews.py  diagnose_answer.py  evaluate_diagnosis.py  make_sft_dataset.py  qlora_sft.py  run_remote_sft.sh  simple_lora_sft.py  smoke_test.py  tiny_markov_baseline.py
interview_simulator_lab/src/interview_lab/: __init__.py  diagnosis.py  prompt_bank.py  simulator.py
interview_simulator_lab/tests/: test_diagnosis.py
notes/: 07_RLHF_DPO_PPO.md  08_LoRA与PEFT.md  12_推理加速.md  13_MoE.md  14_RAG.md
notes/00_LLM总览/: 01_LLM从输入到输出.md  02_LLM能力来源与Scaling_Law.md  03_训练到部署全流程.md
notes/01_基础架构/: 01_名词解释.md  02_分词算法.md  (+4 more)
rag_api/: .env.example  Dockerfile  README.md  app.py  requirements.txt
(+90 files in other folders)
