[project]
name = "commercial-rag-ticket-assistant"
version = "0.1.0"
description = "Commercial-grade enterprise knowledge base RAG and ticket assistant scaffold."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
