[project]
name = "interview-simulator-lab"
version = "0.1.0"
description = "LLM interview simulation, answer diagnosis, and small-model SFT lab."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
train = [
    "accelerate>=0.30.0",
    "datasets>=2.19.0",
    "peft>=0.11.0",
    "transformers>=4.41.0",
    "trl>=0.9.0",
    "bitsandbytes>=0.43.0; platform_system != 'Windows'",
]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
